# KP14

./: .env.example  .gitignore  .new  .pre-commit-config.yaml  20-AGENT-PARALLEL-EXECUTION-COMPLETE.md  ARCHITECT_DELIVERABLES_SUMMARY.md  AUTOMATION-SUMMARY.md  BINARY_SCANNING_OPTIMIZATION_REPORT.md  CACHING_IMPLEMENTATION_REPORT.md  CHANGELOG.md  CODE_QUALITY_REPORT.md  COMPLEXITY_REFACTORING_REPORT.md  CONSOLIDATION_SUMMARY.md  CONSOLIDATION_VISUAL.md  DOCKER-DEPLOYMENT-SUMMARY.md  DOCKER.md  ERROR_HANDLING_QUICK_REFERENCE.md  HARDWARE-ACCELERATION.md  HARDWARE_ARCHITECTURE.md  HARDWARE_QUICKSTART.md  INTEGRATION_TEST_SUMMARY.md  INTELLIGENCE-SUMMARY.md  JPEG Parser in C - Phase 1: Marker Parsing.c  JPEG Parser in C - Phase 2: Huffman Decoding.c  JPEG Parser in C - Phase 3: DCT Reconstruction.c  KEYPLUGmulti.py  LIMITATIONS.md  MEMORY_OPTIMIZATION_REPORT.md  MODULE_CONSOLIDATION_REPORT.md  Makefile  NDA.odg  OPTIMIZER_COMPLETION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PHASE1_FIX1_EXECUTION_SUMMARY.md  PHASE2-COMPLETION-SUMMARY.md  PHASE3_EXECUTIVE_SUMMARY.md  PHASE3_FINAL_POLISH_REPORT.md  PHASE3_FIX9_COMPLETION_SUMMARY.md  PHASE3_QUICK_REFERENCE.md  (+84 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance_issue.yml  technical_debt.yml
NDA_extracted/: NDA_analysis_report.txt  meta.xml
NDA_keyplug_extracted/: NDA_keyplug_analysis.txt
analysis_results/: patterns.json
core_engine/: SECURITY_README.md  __init__.py  cache_manager.py  chunked_file_reader.py  common_utils.py  configuration_manager.py  correlation_context.py  error_handler.py  file_hasher.py  file_validator.py  lazy_loader.py  logging_config.py  optimized_file_io.py  optimized_structures.py  performance_profiler.py  pipeline_manager.py  secure_subprocess.py  security_utils.py
docs/: ANALYZER_TESTING_REPORT.md  API-REFERENCE.md  CODE_REVIEW_SUMMARY.md  COMMAND_WHITELIST_HARDENING_REPORT.md  COMPLETE-CODE-REVIEW-REMEDIATION-SUMMARY.md  COMPREHENSIVE_CODE_REVIEW.md  CONFIGURATION.md  CONTRIBUTING.md  CORE_TESTING_REPORT.md  COVERAGE_IMPROVEMENT_REPORT.md  CRITICAL_TODOS_FIXED.md  CRYPTO_MIGRATION_SUMMARY.md  DATABASE-SCHEMA.md  DEPENDENCY_SCAN_REPORT.md  DOCUMENTATION-SUMMARY.md  HARDWARE_OPTIMIZATION_SUMMARY.md  INSTALLATION.md  INTEGRATION_TESTS_QUICKSTART.md  INTEGRATION_TESTS_REPORT.md  LEGACY_CODE_REMOVAL_REPORT.md  MODULE-REFERENCE.md  MODULE_CONSOLIDATION_PLAN.md  MONITORING.md  OPENVINO-OPTIMIZATION.md  OPTIMIZER_FINAL_SUMMARY.md  PERFORMANCE_QUICK_START.md  PHASE1_FIX2_COMPLETION.md  PHASE2_FIX5_COMPLETION.md  PHASE2_FIX6_SECURITY_SCANNING.md  PRIORITY_FIXES.md  PYTHON-INTERNAL-COMPLETION.md  QADIRECTOR_HANDOFF.md  QUALITY_IMPROVEMENTS_SUMMARY.md  QUICKSTART.md  SECURITY_AUDIT_REPORT.md  SECURITY_SCANNING.md  SECURITY_SCANNING_QUICKSTART.md  SECURITY_VALIDATION_REPORT.md  STREAM4-HARDWARE-ACCELERATION-SUMMARY.md  TESTING.md  (+10 more)
exporters/: __init__.py  csv_exporter.py  json_exporter.py  misp_exporter.py  rule_exporter.py  stix_exporter.py
intelligence/: QUICK-START.md  README.md  __init__.py  intelligence_orchestrator.py
keyplug_analysis_results/: analysis_summary.json
keyplug_full_analysis/: consolidated_analysis_report.txt  consolidated_analysis_results.json
keyplug_full_deep_analysis/: master_report.json  master_report.txt
keyplug_hash_detector/: accelerator.py  detector.py  patterns.py
keyplug_simplified/: Makefile  README.md  keyplug
keyplug_string_decoder/: __init__.py
keyplug_venv/: pyvenv.cfg
malware_recreation/: Makefile  keyplug_malware
odg_contents/: settings.xml
odg_extract/: styles.xml
scripts/: README-GITHUB-ISSUES.md  create_github_issues.py  security_scan.py  validate_memory_optimization.py
stego-analyzer/: README.md  __init__.py  install.sh  requirements.txt  run_pipeline.py  settings.ini
tests/: conftest.py  simple_test.py
(+512 files in other folders)
